Senza il path che si ricrea ogni volta

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="js/turtlesim.js"></script>
   <script type="text/javascript">
     var init = true;
-    var x0 ; 
-    var y0 ;
+    var x0 = 250; 
+    var y0 = 250;
     var c;
     var ctx;
     var x ;
